<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q1"
        android:id="@+id/txtQuestion"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:textAlignment="center"
        android:layout_gravity="top|center_horizontal"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_marginTop="150dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNext"
        android:id="@+id/btnNext"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="next"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginBottom="150dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_rowSpan="3"
        android:id="@+id/btnGroup">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMadalas"
            android:id="@+id/btnMadalas"
            android:checked="false"
            android:tag="2"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMinsan"
            android:id="@+id/btnMinsan"
            android:checked="false"
            android:tag="1"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHindi"
            android:id="@+id/btnHindi"
            android:checked="false"
            android:tag="0"
            android:textSize="20sp" />

    </RadioGroup>

</FrameLayout>