<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHasDrawing"
            android:id="@+id/txtHasDrawing"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnYes"
            android:id="@+id/btnYes"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="clickedYes"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNo"
            android:id="@+id/btnNo"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="clickedNo"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center"
            android:layout_columnWeight="1" />

    </GridLayout>
</FrameLayout>